Optimize some styles

--- a/layout/_partial/archive.ejs
+++ b/layout/_partial/archive.ejs
@@ -1,5 +1,5 @@
 <% if (page.current === 1 && is_home() && theme.notice) { %>
-  <article class="mdui-card mdui-m-b-5 mdui-hoverable">
+  <article class="mdui-card mdui-m-b-5">
     <div class="mdui-card-content mdui-typo mdui-ripple">
       <i class="mdui-icon material-icons mdui-text-color-deep-orange">notifications</i> <%- theme.notice %>
     </div>
