--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -24,7 +24,7 @@
 <% } else { %>
   <%- css(theme.gallery.fancybox_css) %>
   <style>#main article .mdui-card-content .center-block{display:block!important;margin-right:auto!important;margin-left:auto!important}</style>
-  <article class="mdui-card mdui-m-b-5 mdui-hoverable">
+  <article class="mdui-card mdui-m-b-5">
     <header class="mdui-card-media">
       <img src="<%- page.thumbnail || '/images/random/material-' + (Math.round(Math.random() * 18) + 1) + '.png' %>" style="max-height: 240px;">
       <div class="mdui-card-media-covered">
