Update mdui version

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -89,7 +89,7 @@
       </blockquote>
       <% if (is_post() && page.donate !== false && theme.donate && theme.donate.length) { %>
         <div class="mdui-text-center">
-          <button class="mdui-fab mdui-color-deep-orange mdui-text-color-white mdui-ripple" mdui-dialog="{target: '#donate'}" mdui-tooltip="{content: '<%= __('donate') %>', position: 'top'}"><i class="mdui-icon material-icons">local_cafe</i></button>
+          <button class="mdui-fab mdui-color-deep-orange mdui-text-color-white mdui-ripple" mdui-dialog="{target: '#donate'}" mdui-tooltip="{content: '<%= __('donate') %>', position: 'top'}"><i class="mdui-icon material-icons">thumb_up</i></button>
         </div>
       <% } %>
     </div>
